feat: Observable done

--- a/communication-app/src/app/app.component.html
+++ b/communication-app/src/app/app.component.html
@@ -2,7 +2,7 @@
 <app-input-binding 
   firstName="Bob"
   lastName="March"
-  [age]="age">
+  [age]="age"> //Linka a variável do componente atual para preencher o componente filho
 </app-input-binding>
 
 <app-event></app-event>
