--- a/communication-app/src/app/event/child-item/child-item.component.html
+++ b/communication-app/src/app/event/child-item/child-item.component.html
@@ -1,7 +1,7 @@
 <h3>{{title}}</h3>
 <div class="horizontal-buttons">
   <button mat-raised-button color="primary" 
-    (click)="btnClick(1)">
+    (click)="btnClick(1)"> <!-- Ao clickar no botão chamará a função do componente, enviando os dados -->
     <mat-icon>exposure_plus_1</mat-icon>
   </button>
   <button mat-raised-button color="primary"
