--- a/communication-app/src/app/parent-child/parent-child.component.html
+++ b/communication-app/src/app/parent-child/parent-child.component.html
@@ -1,10 +1,10 @@
 <div>
-  <button mat-button color="primary" (click)="stopwatch.start()">Start</button>
+  <button mat-button color="primary" (click)="stopwatch.start()">Start</button> <!-- Por meio do "stopwatch" consegue acessar as funções do componente que contém esse nome -->
   <button mat-button color="accent" (click)="stopwatch.stop()">Stop</button>
   <button mat-button color="warn" (click)="stopwatch.clear()">Clear</button>
 </div>
 
-<app-timer #stopwatch>
+<app-timer #stopwatch> <!-- Esse nome "#stopwatch" é uma variável de template. Assim é possível chamar o componente e as funções de dentro dele. -->
 </app-timer>
 
 <div>
